// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`pipeline_own_line.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function pipeline() {
	0
	// Comment
	|> x
}

bifornCringerMoshedPerplexSawder(
  askTrovenaBeenaDependsRowans,
  glimseGlyphsHazardNoopsTieTie,
  averredBathersBoxroomBuggyNurl
) // comment
|> kochabCooieGameOnOboleUnweave
|> glimseGlyphsHazardNoopsTieTie;

bifornCringerMoshedPerplexSawder(
  askTrovenaBeenaDependsRowans,
  glimseGlyphsHazardNoopsTieTie
)
|> foo // comment
|> kochabCooieGameOnOboleUnweave
|> glimseGlyphsHazardNoopsTieTie;

bifornCringerMoshedPerplexSawder[
  askTrovenaBeenaDependsRowans +
  glimseGlyphsHazardNoopsTieTie +
  averredBathersBoxroomBuggyNurl
] // comment
|> kochabCooieGameOnOboleUnweave
|> glimseGlyphsHazardNoopsTieTie;

bifornCringerMoshedPerplexSawder[
  askTrovenaBeenaDependsRowans +
  glimseGlyphsHazardNoopsTieTie +
  averredBathersBoxroomBuggyNurl
]
|> foo // comment
|> kochabCooieGameOnOboleUnweave
|> glimseGlyphsHazardNoopsTieTie;

=====================================output=====================================
function pipeline() {
  0 |>
    // Comment
    x;
}

bifornCringerMoshedPerplexSawder(
  askTrovenaBeenaDependsRowans,
  glimseGlyphsHazardNoopsTieTie,
  averredBathersBoxroomBuggyNurl,
) // comment
  |> kochabCooieGameOnOboleUnweave
  |> glimseGlyphsHazardNoopsTieTie;

bifornCringerMoshedPerplexSawder(
  askTrovenaBeenaDependsRowans,
  glimseGlyphsHazardNoopsTieTie,
)
  |> foo // comment
  |> kochabCooieGameOnOboleUnweave
  |> glimseGlyphsHazardNoopsTieTie;

bifornCringerMoshedPerplexSawder[
  askTrovenaBeenaDependsRowans +
    glimseGlyphsHazardNoopsTieTie +
    averredBathersBoxroomBuggyNurl
] // comment
  |> kochabCooieGameOnOboleUnweave
  |> glimseGlyphsHazardNoopsTieTie;

bifornCringerMoshedPerplexSawder[
  askTrovenaBeenaDependsRowans +
    glimseGlyphsHazardNoopsTieTie +
    averredBathersBoxroomBuggyNurl
]
  |> foo // comment
  |> kochabCooieGameOnOboleUnweave
  |> glimseGlyphsHazardNoopsTieTie;

================================================================================
`;

exports[`pipeline_own_line.js format 2`] = `
"Unexpected token (4:3)
  2 | 	0
  3 | 	// Comment
> 4 | 	|> x
    | 	 ^
  5 | }
  6 |
  7 | bifornCringerMoshedPerplexSawder(
Cause: Unexpected token (4:2)"
`;

exports[`pipeline_own_line.js format 3`] = `
"Unexpected token > (4:3)
  2 | 	0
  3 | 	// Comment
> 4 | 	|> x
    | 	 ^
  5 | }
  6 |
  7 | bifornCringerMoshedPerplexSawder(
Cause: Unexpected token >"
`;

exports[`pipeline_own_line.js format 4`] = `
"Unexpected token: '>' (4:3)
  2 | 	0
  3 | 	// Comment
> 4 | 	|> x
    | 	 ^
  5 | }
  6 |
  7 | bifornCringerMoshedPerplexSawder(
Cause: [4:2-4:3]: Unexpected token: '>'"
`;

exports[`pipeline_own_line.js format 5`] = `
"Unexpected token (4:3)
  2 | 	0
  3 | 	// Comment
> 4 | 	|> x
    | 	 ^
  5 | }
  6 |
  7 | bifornCringerMoshedPerplexSawder("
`;
